# python-pairs

./: LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
src/hexlet/pairs/: __init__.py
test/: test_pairs.py
