[tool.poetry]
name = "hexlet-pairs"
version = "0.1.2"
description = "A SICP'ish functional pairs implemented in Python"
authors = ["Hexlet Team <info@hexlet.io>"]
license = "ISC"
readme = "README.md"
homepage = "https://github.com/hexlet-components/python-pairs"
repository = "https://github.com/hexlet-components/python-pairs"
classifiers = [
    "Intended Audience :: Education",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3.6",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
packages = [
    { include = "hexlet/pairs/*.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
wemake-python-styleguide = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
